--- a/app2/package.json
+++ b/app2/package.json
@@ -27,7 +27,10 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "highlight": "^0.2.4",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
+    "html2markdown": "^1.1.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -42,6 +45,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
+    "simplemde": "^1.11.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -98,9 +102,13 @@
     "extends": "react-app"
   },
   "proxy": {
-    "/getBlog":{
-      "target":"http://localhost:8080/getBlog",
-      "secure":"false"
+    "/getBlog": {
+      "target": "http://localhost:8080/getBlog",
+      "secure": "false"
     }
+  },
+  "devDependencies": {
+    "marked": "^0.3.19",
+    "react-css-modules": "^4.7.2"
   }
 }
