--- a/app2/package.json
+++ b/app2/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "3.0.1",
     "highlight": "^0.2.4",
     "highlight.js": "^9.12.0",
+    "html-to-markdown": "^1.0.0",
     "html-webpack-plugin": "2.29.0",
     "html2markdown": "^1.1.0",
     "jest": "20.0.4",
