--- a/app2/package.json
+++ b/app2/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "3.0.1",
     "highlight": "^0.2.4",
     "highlight.js": "^9.12.0",
+    "history": "^4.7.2",
     "html-to-markdown": "^1.0.0",
     "html-webpack-plugin": "2.29.0",
     "html2markdown": "^1.1.0",
@@ -45,6 +46,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
