--- a/app2/package.json
+++ b/app2/package.json
@@ -15,6 +15,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lz-editor": "^0.12.1",
+    "react-markdown": "^3.3.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
